# cxemotexnika

./: .gitmodules  LICENSE  README.md
Examples/FTDI_JTAG/: ftdi_jtag.cfg
Examples/MIMXRT1010_EVK/freertos_template/: freertos_template.mex
Examples/MIMXRT1010_EVK/freertos_template/armgcc/: CMakeLists.txt
Examples/MIMXRT1010_EVK/freertos_template/armgcc/cmake/: asmflags.cmake  ldflags.cmake
Examples/MIMXRT1010_EVK/freertos_template/board/: clock_config.c  peripherals.c
Examples/MIMXRT1010_EVK/freertos_template/user/: board.h  main.cpp
Examples/MIMXRT1010_EVK/standalone_template/armgcc/: CMakeLists.txt
Examples/MIMXRT1010_EVK/standalone_template/armgcc/cmake/: cflags.cmake  cxxflags.cmake
Examples/MIMXRT1010_EVK/standalone_template/board/: clock_config.h  peripherals.c.bak  peripherals.h  peripherals.h.bak  pin_mux.c  pin_mux.h
Examples/MIMXRT1010_EVK/standalone_template/user/: delay.h  main.cpp
Examples/MIMXRT1010_EVK/standalone_template/utilities/: fsl_debug_console_conf.h  fsl_debug_console_conf.h.bak
Examples/NUCLEO_F429ZI/nucleo_f429zi_https_client/: .cproject  .mxproject  .project  nucleo_f429zi_https_client Debug.cfg  nucleo_f429zi_https_client.ioc
Examples/NUCLEO_F429ZI/nucleo_f429zi_https_client/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Examples/NUCLEO_F429ZI/nucleo_f429zi_https_client/Core/Src/: main.c  ssl_client.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Examples/NUCLEO_F429ZI/nucleo_f429zi_https_client/LWIP/: lwip.c  lwipopts.h
Examples/NUCLEO_F429ZI/nucleo_f429zi_https_client/MBEDTLS/: mbedtls.c  mbedtls.h  mbedtls_config.h  net_sockets.c
Examples/NUCLEO_F429ZI/nucleo_f429zi_https_client/USB_DEVICE/: usbd_conf.c
Examples/NUCLEO_F429ZI/nucleo_f429zi_tcp_socket_client/: .cproject  .mxproject  .project  README.md  nucleo_f429zi_tcp_socket_client.ioc
Examples/NUCLEO_F429ZI/nucleo_f429zi_tcp_socket_client/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_it.h  tcp_socket_client.h
Examples/NUCLEO_F429ZI/nucleo_f429zi_tcp_socket_client/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tcp_socket_client.c
Examples/NUCLEO_F429ZI/nucleo_f429zi_tcp_socket_client/LWIP/: lwipopts.h
Examples/NUCLEO_F429ZI/nucleo_f429zi_tcp_socket_server/: .cproject  .mxproject  .project  README.md  nucleo_f429zi_tcp_socket_server.ioc
Examples/NUCLEO_F429ZI/nucleo_f429zi_tcp_socket_server/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tcp_socket_server.h
Examples/NUCLEO_F429ZI/nucleo_f429zi_tcp_socket_server/Core/Src/: main.c  stm32f4xx_it.c  tcp_socket_server.c
Examples/NUCLEO_F429ZI/nucleo_f429zi_tcp_socket_server/LWIP/: ethernetif.c  lwip.c  lwipopts.h
Examples/Raspberry-Pi-Pico/ADXL345/: ADXL345.c  CMakeLists.txt
Examples/Raspberry-Pi-Pico/FreeRTOS_Demo/: ADXL345.c  ADXL345.h  CMakeLists.txt  README.md  main.c
Examples/Raspberry-Pi-Pico/blink/: CMakeLists.txt  blink.c  pico.sh
Examples/RaspberryPi3/tcp_server_and_client/: tcp_client.c  tcp_server.c
Examples/RaspberryPi3/wakaama/: wakaama.patch
KiCad/FTDI_JTAG/PCB/: $savepcb.brd  ftdi_jtag-cache.bak  ftdi_jtag-cache.lib  ftdi_jtag-rescue.lib  ftdi_jtag.bak  ftdi_jtag.brd  ftdi_jtag.cmp  ftdi_jtag.net  ftdi_jtag.pro  ftdi_jtag.sch  ftdi_jtag.stf
